force word breaks to prevent table overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
-body {
-  margin: 0;
+td {
+  word-break: break-all;
 }
